# reactor-ca

./: .gitignore  .tree-sitter-mcp-config.yaml  .yamlfmt  CHANGELOG.md  CLAUDE.md  DEVICES.md  INSTALL_CA.md  LICENSE  README.md  SCHEMA.md  SECURITY.md  STATELESS.md  UPDATE.md  WORKFLOW.md  ca  devenv.nix  flake.nix  go.mod  go.sum  inventory.yaml  justfile  pyproject.toml
.github/: FUNDING.yml  dependabot.yaml
.github/workflows/: browsers.yml  ci.yml
.github/workflows/support/: browser-test.js
ca/: ca_operations.py  cert_operations.py  main.py
certs/ca/: ca.crt
certs/hosts/mushroom.vpn.reactor.de/: cert.crt
certs/hosts/server1.example.com/: cert.crt
cmd/ca/: main.go  main_test.go
cmd/ca/commands/: ca.go  config.go  helpers.go  host.go  init.go  root.go
cmd/reactor-ca/: main.go  main_test.go
cmd/reactor-ca/commands/: ca.go  config.go  helpers.go  host.go  init.go  root.go
cmd/reactor-ca/testdata/: external.csr  external.key
config/: ca_config.yaml  hosts.yaml
design_history/: ARCHITECTURE_A.md  ARCHITECTURE_AB.md  ARCHITECTURE_B.md  CRYPTO.md  DATACLASSES_IMPLEMENTATION.md  DATACLASSES_REVIEW.md  GEMINI_PROMPT.md  GEMINI_REVIEW.md  REFACTOR_CONFIG.md  REFACTOR_FINAL.md  REFACTOR_FINAL_REVIEW.md  REFACTOR_FOUNDATION.md  REFACTOR_MINIMAL.md  REFACTOR_PROGRESS.md  REFACTOR_REVIEW.md  REFACTOR_STORE.md  REFACTOR_X509.md  REVIEW.md  SPECS.md  STEPS.md
docs/: browser-matrix-ci.json  browser-matrix-local.json  browser-matrix.json  lets_encrypt_cert.md  lets_encrypt_cert.txt
docs/assets/: asciinema_demo.cast
docs/llm/: age_integration.md  age_plan.md  do_go.md  go_review.md  go_tests.md  polish.md  polish_2.md  review_2.md
example_config/: README.md  ca-secure-enclave.yaml  ca-yubikey.yaml  ca.yaml  ca_config.yaml  hosts.yaml
internal/app/: application.go  application_test.go  ca.go  config.go  csr.go  host.go  host_test.go  issue_host_test.go  reencrypt.go  support_test.go
internal/app/testhelper/: helper.go
internal/domain/: config.go  crypto.go  crypto_test.go  errors.go  extensions.go  interfaces.go
internal/infra/clock/: clock.go  clock_faketime.go  time_source.go  time_source_faketime.go
internal/infra/config/: crypto_defaults_test.go  schemas.go  yaml_loader.go  yaml_updater.go
internal/infra/crypto/: age_service.go  cached_service.go  cached_service_test.go  factory.go  service.go  validation.go  validation_service.go
internal/infra/crypto/extensions/: authority_key_identifier.go  basic_constraints.go  basic_constraints_test.go  crl_distribution_points.go  extended_key_usage.go  key_usage.go  name_constraints.go  registry.go  subject_key_identifier.go  unknown.go  unknown_test.go
internal/infra/crypto/pkcs8/: aes.go  pkcs8.go  pkcs8_test.go
internal/infra/exec/: commander.go  commander_test.go  commander_unix.go  commander_windows.go  openssl_unix.go  openssl_windows.go
internal/infra/identity/: factory.go  merged.go  password.go  plugin.go  plugin_test.go  ssh.go  ssh_test.go
internal/infra/logging/: logger.go
internal/infra/password/: provider.go  provider_test.go
internal/infra/security/: security.go  security_windows.go
internal/infra/store/: age_format.go  age_format_test.go  filestore.go  filestore_test.go
internal/localedate/: localedate.go  localedate_test.go
internal/pathutil/: path.go  path_test.go
internal/testutil/: helpers.go
internal/ui/: age_plugin.go  cert_info.go  cert_info_extensions.go  cert_info_extensions_test.go  cert_info_test.go  output.go  output_test.go  prompt.go  table.go
llm/: aes-gcm.md  go_impl.md  go_prd.md
reactor_ca/: __init__.py  ca.py  ca_operations.py  cert_operations.py  cli.py  cli_ca.py  cli_host.py  config.py  config_validator.py  crypto.py  defaults.py  export_deploy.py  host.py  host_operations.py  inventory.py  main.py  models.py  password.py  paths.py  result.py  store.py  types.py  utils.py  x509_crypto.py
reactor_ca/schemas/: ca_config_schema.yaml  hosts_config_schema.yaml  hosts_schema.yaml
schemas/: README.md
schemas/v1/: ca.schema.json  hosts.schema.json
scripts/: measure_https_handshake.sh
test/: age-plugin-mock
test/e2e/: age_plugin_test.go  browser_compatibility_test.go  cli_test.go  interactive_password_test.go  interactive_test.go  pty_unix.go  pty_windows.go  ssh_roundtrip_test.go  support_test.go
test/e2e/testdata/mixed_store/config/: ca.yaml  hosts.yaml
test/e2e/testdata/mixed_store/store/ca/: ca.crt  ca.key.age
test/e2e/testdata/mixed_store/store/hosts/ai-consciousness-nexus/: cert.crt  cert.key.age
test/e2e/testdata/mixed_store/store/hosts/ambassador-zyx-alpha/: cert.crt  cert.key.age
test/e2e/testdata/mixed_store/store/hosts/broken-key/: cert.key.age
test/e2e/testdata/mixed_store/store/hosts/chrono-signer-42/: cert.crt  cert.key.age
test/e2e/testdata/mixed_store/store/hosts/hologram-identity-prime/: cert.crt
test/e2e/testdata/mixed_store/store/hosts/host2/: cert.crt
test/e2e/testdata/mixed_store/store/hosts/hp-laserjet-office/: cert.crt  cert.key.age
test/e2e/testdata/mixed_store/store/hosts/john-orphan/: cert.key.age
test/e2e/testdata/mixed_store/store/hosts/oracle-blockchain-sage/: cert.key.age
test/e2e/testdata/mixed_store/store/hosts/ring-doorbell-front/: cert.crt  cert.key.age
test/e2e/testdata/mixed_store/store/hosts/toaster-cyberbread-3000/: cert.crt  cert.key.age
test/e2e/testdata/mixed_store/store/hosts/web-server-example/: cert.crt  cert.key.age
test/integration/: cli_test.go  config_validation_test.go  crypto_caching_test.go  extensions_test.go  plugin_identity_test.go  reencrypt_rollback_test.go  ssh_identity_test.go  testhelpers.go
test/support/: age-plugin-mock  age-plugin-python
tests/: __init__.py  conftest.py  helpers.py  test_ca.py  test_config.py  test_config_validator.py  test_crypto.py  test_example_configs.py  test_host.py  test_import_export.py  test_integration.py  test_management.py  test_password.py  test_workflow.py
