[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "reactor_ca"
version = "0.1.0"
description = "A Python CLI tool to manage a homelab CA"
authors = [{ name = "Steffen Beyer", email = "steffen@beyer.io" }]
readme = "README.md"
requires-python = ">=3.12,<4.0"
license = { text = "BSD" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Topic :: Security :: Cryptography",
]
# Dependencies are managed by Poetry in [tool.poetry.dependencies]

[project.scripts]
ca = "reactor_ca.main:cli"

[tool.poetry]
name = "reactor_ca"
version = "0.1.0"
description = "A Python CLI tool to manage a homelab CA"
authors = ["Steffen Beyer"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.3"
cryptography = "^41.0.0"
pyyaml = "^6.0.0"
rich = "^13.5.0"
yamale = "^6.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
mypy = "^1.3.0"
ruff = "^0.1.6"
types-pyyaml = "^6.0.12.20250402"
poethepoet = "^0.34.0"

[tool.poetry.scripts]
ca = "reactor_ca.main:cli"

[tool.poe.tasks]
format = { cmd = "ruff format ca .", help = "Format code with ruff" }
formatcheck = { cmd = "ruff format --check ca .", help = "Check code format" }
lint = { cmd = "ruff check ca .", help = "Run ruff linter" }
typecheck = { cmd = "mypy ca reactor_ca", help = "Run mypy type checker" }
test = { cmd = "pytest", help = "Run pytest tests" }
check = { sequence = [
    "formatcheck",
    "lint",
    "typecheck",
    "test",
], help = "Run all checks and tests" }

[tool.ruff]
line-length = 118
target-version = "py312"
select = ["E", "F", "I", "N", "W", "B", "PL", "C", "D", "UP", "ANN"]
# Explicitly select rules to avoid conflicts
ignore = ["D203", "D213"]

[tool.ruff.mccabe]
max-complexity = 15 # Default is 10

[tool.ruff.pylint]
max-returns = 10    # Default is 6
max-branches = 18   # Default is 12
max-statements = 60 # Default is 50

[tool.ruff.per-file-ignores]
# No typing for tests for now, allow constant values
"tests/*" = ["ANN", "PLR2004"]
# Let's keep these warm for later...
"reactor_ca/cert_operations.py" = [
    "PLR0913",
    "ANN401",
    "C901",
    "PLR0915",
    "PLR0912",
]

[tool.mypy]
python_version = "3.12"
