[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "reactor_ca"
version = "0.1.0"
description = "A Python CLI tool to manage a homelab CA"
authors = [{ name = "Steffen Beyer", email = "steffen@beyer.io" }]
readme = "README.md"
requires-python = ">=3.12,<4.0"
license = { text = "BSD" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Topic :: Security :: Cryptography",
]
# Dependencies are managed by Poetry in [tool.poetry.dependencies]

[project.scripts]
ca = "reactor_ca.main:cli"

[tool.poetry]
name = "reactor_ca"
version = "0.1.0"
description = "A Python CLI tool to manage a homelab CA"
authors = ["Steffen Beyer"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.3"
cryptography = "^41.0.0"
rich = "^13.5.0"
ruamel-yaml = "^0.18.5"
pydantic = "^2.6.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
poethepoet = "^0.34.0"
pytest = "^7.0.0"
ruff = "^0.1.6"

[tool.poetry.scripts]
ca = "reactor_ca.main:cli"

[tool.poe.tasks]
format = { cmd = "ruff format ca reactor_ca tests", help = "Format code with ruff" }
formatcheck = { cmd = "ruff format --check ca reactor_ca tests", help = "Check code format" }
lint = { cmd = "ruff check --preview ca reactor_ca", help = "Run ruff linter" }
typecheck = { cmd = "mypy ca reactor_ca", help = "Run mypy type checker" }
test = { cmd = "pytest", help = "Run pytest tests" }
check = { sequence = [
    "formatcheck",
    "lint",
    "typecheck",
    "test",
], help = "Run all checks and tests" }
fix = { sequence = [
    "format",
    { cmd = "ruff check --preview --fix --unsafe-fixes ca reactor_ca" }
], help = "Fix format and lint (unsafe)" }

[tool.ruff]
line-length = 118
target-version = "py312"
select = ["E", "F", "I", "N", "W", "B", "PL", "C", "D", "UP", "ANN"]
# Explicitly select line spacing rules to avoid conflicts
ignore = ["D203", "D213"]

[tool.ruff.mccabe]
max-complexity = 16 # Default is 10

[tool.ruff.pylint]
max-returns = 12    # Default is 6
max-branches = 18   # Default is 12
max-statements = 60 # Default is 50
max-args = 7        # Default is 5

[tool.ruff.per-file-ignores]
# No typing for tests for now, allow constant values
"tests/*" = ["ANN", "PLR2004", "PLR6301"]

[tool.mypy]
python_version = "3.12"
